--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 @import "tailwindcss";
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-.pagecont{
-    height: 100vh;
-    width: 100%;
+.container {
+  height: 100vh;
+  width: 100%;
 }
-
-  
+.pagecont {
+  height: 100vh;
+  width: 100%;
+}
