--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,21 +1,12 @@
 .foot {
   height: 48vh;
   width: 100%;
-  background: linear-gradient(
-    to right,
-    #1a16ffdf,
-    #0b0b0b
-  ); 
   border-top: 1px solid;
+  background: linear-gradient(
+    179deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgb(255, 237, 167) 100%
+  );
+
   padding: 40px;
-}
-.lik {
-  margin: 0 50px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.lik a {
-  color: rgb(255, 255, 255);
-  font-size: 25px;
 }
