--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -12,84 +12,64 @@
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  background-image: url("../assets/view-hawaiian-shirt-with-floral-print-hanger.jpg");
+   background: linear-gradient(
+    179deg,
+    rgb(0, 229, 255) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  /* background-image: url("../assets/view-hawaiian-shirt-with-floral-print-hanger.jpg");
   background-size: cover;
-  background-position: left;
+  background-position: left; */
 }
 .landcont {
   width: 100%;
   display: flex;
   justify-content: center;
 }
+.left{
+  width: 50%;
+}
+.right{
+    width: 40%;
+
+}
 .land {
   display: grid;
-  row-gap: 10px;
+  row-gap: 5px;
   align-items: center;
   padding: 40px 0;
-  height: 45vh;
-  width: 85vw;
-  border: 1px solid rgba(0, 0, 0, 0.559);
-  margin-top: 18vh;
+  height: 65vh;
+  margin-top: 20vh;
   text-align: center;
-  background-color: var(--ext);
-  border-radius: 25px;
-  box-shadow: inset 0px 0 20px black;
-  backdrop-filter: blur(10px);
+ 
 }
-h1 {
-  font-size: 5em;
-  color: rgb(0, 4, 255);
-  text-shadow: 0 0 20px rgb(255, 255, 255);
-  -webkit-text-stroke: 1.5px rgb(255, 255, 255);
-}
+
 .bspan {
   font-family: "Lavishly Yours", cursive;
   font-weight: 800;
   font-style: normal;
-  font-size: 2.5em;
-  color: rgb(255, 255, 255);
+  font-size: 4em;
+  color: rgb(21, 20, 20);
 
-  text-shadow: 3px 3px 10px rgb(255, 0, 187);
+  text-shadow: 2px 2px 8px rgb(255, 0, 187);
   letter-spacing: 3px;
 }
-.uspan {
-  color: rgb(21, 0, 255);
-  position: relative;
-  display: inline-block;
-}
-.uspan::after {
-  content: "";
-  width: 30px;
-  height: 34px;
-  background-color: yellow;
-  /* transform: translateX(-px); */
-  transform: translateY(16px);
-  position: absolute;
-  top: 36px;
-  left: 10px;
-  border-radius: 50%;
-  z-index: -1;
-}
-.aspan {
-  color: rgb(21, 0, 255);
-  position: relative;
-  display: inline-block;
+.shop_btn button{
+  font-weight: 800;
+  padding:0 15px;
+  font-style: normal;
+  border-radius: 20px;
+  font-size: 2em;
+  background-color: rgb(23, 23, 91);
+  color: rgb(249, 242, 203);
+  margin-top: 20px;
+  cursor: pointer;
+
   
-}
-.aspan::after {
-  content: "";
-  width: 20px;
-  height: 18px;
-  background-color: yellow;
-  position: absolute;
-  transform: translateY(16px);
 
-  top: 52px;
-  left: 11px;
-  border-radius: 60%;
-  z-index: -1;
 }
 
+/* 
 .bar {
   margin-top: 10px;
   display: inline-flex;
@@ -113,7 +93,7 @@ h1 {
   height: 160px;
   min-width: 180px;
   padding: 20px;
-  /* background-color: white; */
+  background-color: white;
   border-radius: 10px;
 }
 
@@ -125,10 +105,5 @@ h1 {
   border: 2px solid;
   min-width: 180px;
   z-index: 2;
-}
-/* .card img:hover {
-  transition-duration: 0.5s;
-  width: 200px;
-  height: 180px;
-
 } */
+
