--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -60,17 +60,21 @@ ul a {
   cursor: pointer;
   border: 1.5px solid black;
   border-radius: 20px;
-  padding: 8px;
+  padding: 5px 8px;
+}
+.login:active {
+  background-color: rgb(0, 225, 255);
 }
 
 .head {
   font-size: 2.5em;
+  text-shadow: 1px 1px 1px rgb(0, 0, 0);
 }
 ul img {
-  height: 60px;
-  width: 60px;
-  margin: 20px;
-  filter: drop-shadow(5px 5px 10px rgb(0, 0, 0));
+  height: 90px;
+  width: 90px;
+  /* margin-left: 10px; */
+  filter: drop-shadow(2px 2px 1.5px rgb(0, 0, 0));
 }
 .title {
   text-shadow: 0 0 10px rgb(255, 255, 255);
@@ -79,5 +83,35 @@ ul img {
   align-items: center;
   justify-content: space-around;
   /* -webkit-text-stroke: .5px rgb(255, 255, 255); */
-
+}
+hr {
+  margin-top: 5px;
+  transform: translateX(10px);
+  width: 80%;
+  height: 3px;
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(255, 0, 0);
+}
+.cart {
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  padding-left: 10px;
+ 
+  
+}
+.cart_count {
+  width: 15px;
+  background-color: red;
+ display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15px;
+  margin-top: -15px;
+  margin-left: -8px;
+  font-size: 15px;
+  border-radius: 50%;
+  font-weight:500;
+  color: white;
 }
