--- a/src/styles/product.module.css
+++ b/src/styles/product.module.css
@@ -1,5 +1,10 @@
 .container {
-background-color: bisque;
+  background: linear-gradient(
+    179deg,
+    rgb(0, 229, 255) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+
   height: 100%;
   width: 100%;
   display: flex;
@@ -17,64 +22,39 @@ background-color: bisque;
   margin-top: 50px;
   display: flex;
   justify-content: center;
+  box-sizing: border-box;
 }
 .landcont {
-
   height: 100%;
-  width: 80vw;
+  width: 60vw;
   border-radius: 25px;
-  /* box-shadow: 2px 2px 20px rgb(1, 0, 85); */
-  /* backdrop-filter: blur(10px); */
+  justify-content: center;
+  background-color: aqua;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
 }
 .mens {
-  background-color: #ffecdb;
-  box-shadow: inset 0px 0 20px rgb(0, 238, 255);
-  flex-direction: column;
-  display: flex;
-  border: 1px solid;
+  width: 50%;
+  box-sizing: border-box;
+  height: 100%;
 
-  justify-content: center;
-  align-items: center;
-  height: 85%;
-  width: 48%;
-  border-radius: 25px;
-  backdrop-filter: blur(10px);
+  border-right: 2px solid black;
 }
 .kids {
-  flex-direction: column;
-  border: 1px solid;
-  box-shadow: inset 0px 0 20px rgb(255, 0, 242);
-  background-color: #ffecdb;
-  /* box-shadow: inset 0px 0 20px black; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 85%;
-  width: 48%;
-  border-radius: 25px;
-  backdrop-filter: blur(10px);
+  box-sizing: border-box;
+  width: 50%;
+  height: 100%;
+  border-left: 2px solid black;
 }
 .kids img {
-  margin-top: 20px;
-  height: 82%;
-  filter: brightness(1.2);
-  cursor: pointer;
-  filter: drop-shadow(5px 5px 10px rgb(255, 0, 242));
-
-  width: 75%;
+  transform: translateY(15%);
 }
 .mens img {
-  /* margin-bottom: 10px; */
-  cursor: pointer;
-  filter: brightness(1.2);
-  height: 90%;
-  width: 65%;
-  filter: drop-shadow(5px 5px 10px rgb(0, 238, 255));
+  height: 50vh;
+  transform: translateX(45%);
 }
 .lett {
+  text-align: center;
   color: #000000;
   font-size: 35px;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
