--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Georgia, "Times New Roman", Times, serif;
+
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
-.container {
-  height: 100vh;
-  width: 100%;
-}
-.pagecont {
-  height: 100vh;
-  width: 100%;
+::selection {
+  background-color: #ee00ff6e; 
+  color: white; 
 }
