--- a/src/styles/item.module.css
+++ b/src/styles/item.module.css
@@ -1,10 +1,10 @@
 .item{
-    width: 350px;
+    width: 240px;
 }
 .item p{
     margin: 6px 0px;
 }
-.item_prices{
+.item_price{
     display: flex;
     gap:20px
 }
@@ -13,7 +13,7 @@
     font-size: 18px;
     font-weight: 600px;
 }
-.ite_price_old{
+.item_price_old{
 
     color: #8c8c8c;
     font-size: 18px;
