--- a/src/styles/mens.module.css
+++ b/src/styles/mens.module.css
@@ -1,8 +1,10 @@
-.container{
- background: linear-gradient(
+.container {
+  background: linear-gradient(
     179deg,
     rgb(255, 142, 210) 0%,
     rgba(255, 255, 255, 1) 100%
-  );    height: 100%;
-    width: 100%;
+  );
+  height: 100%;
+  width: 100%;
+  
 }
