--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -31,11 +31,11 @@ ul a {
   display: flex;
   align-items: center;
   font-size: 20px;
-  padding: 10px;
+  padding: 15px;
   width: 38vw;
-  background-color: var(--white);
   height: 5vh;
-  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.692);
+  border-radius: 15px;
   box-sizing: border-box;
 }
 .ip {
@@ -54,7 +54,7 @@ ul a {
   outline: none;
 }
 .ip::placeholder {
-  font-style: italic;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 .login {
   cursor: pointer;
@@ -69,6 +69,7 @@ ul a {
 .head {
   font-size: 2.5em;
   text-shadow: 1px 1px 1px rgb(0, 0, 0);
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 ul img {
   height: 90px;
@@ -98,13 +99,11 @@ hr {
   display: flex;
   justify-content: center;
   padding-left: 10px;
- 
-  
 }
 .cart_count {
   width: 15px;
   background-color: red;
- display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   height: 15px;
@@ -112,6 +111,6 @@ hr {
   margin-left: -8px;
   font-size: 15px;
   border-radius: 50%;
-  font-weight:500;
+  font-weight: 500;
   color: white;
 }
