--- a/src/styles/product.module.css
+++ b/src/styles/product.module.css
@@ -1,61 +1,101 @@
 .container {
-  background: linear-gradient(
-    179deg,
-    rgb(0, 229, 255) 0%,
-    rgba(255, 255, 255, 1) 100%
-  );
-
+  background: linear-gradient(180deg, #91f0ff 0%, #e1ffea22 60%);
   height: 100%;
   width: 100%;
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
 .jea {
   color: rgb(0, 0, 0);
   margin-top: 80px;
-  font-size: 25px;
+  font-size: 35px;
+  font-weight: 600;
   padding: 10px;
 }
-.land {
-  height: 58vh;
-  width: 100%;
-  margin-top: 50px;
+.landcont {
+  border-bottom: 80px;
+  height: 80vh;
+  display: flex;
+  align-items: baseline;
+  width: 70%;
+  justify-content: space-between;
+}
+
+.content_left {
+  position: relative;
+  flex: 1;
+  height: 400px;
+
+  width: 300px;
+}
+.content_right {
+  position: relative;
+  flex: 1;
+  height: 400px;
+  width: 300px;
+}
+
+.lett {
+  font-size: 25px;
+  font-weight: 500;
   display: flex;
   justify-content: center;
-  box-sizing: border-box;
 }
-.landcont {
-  height: 100%;
-  width: 60vw;
-  border-radius: 25px;
-  justify-content: center;
-  background-color: aqua;
+.over img {
+  height: 400px;
+  border-radius: 10px;
+  width: 300px;
+  box-shadow: 4px 4px 20px rgba(153, 0, 255, 0.594);
+}
+.content_left::after {
+  position: absolute;
+  content: "FORMAL";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 10px;
+  text-shadow: 4px 4px 20px rgba(153, 0, 255, 0.594);
+
+  background-color: rgba(0, 0, 0, 0.349);
+  transform: scale(0, 1);
+  transition: transform 1s;
+  transform-origin: right;
+  backdrop-filter: blur(3px);
+  color: white;
   display: flex;
   align-items: center;
-}
-.mens {
-  width: 50%;
-  box-sizing: border-box;
-  height: 100%;
-
-  border-right: 2px solid black;
-}
-.kids {
-  box-sizing: border-box;
-  width: 50%;
-  height: 100%;
-  border-left: 2px solid black;
-}
-.kids img {
-  transform: translateY(15%);
-}
-.mens img {
-  height: 50vh;
-  transform: translateX(45%);
-}
-.lett {
-  text-align: center;
-  color: #000000;
+  justify-content: center;
   font-size: 35px;
-  -webkit-text-stroke: 1px rgb(0, 0, 0);
+  font-weight: 600;
+}
+
+.content_left:hover::after {
+  transform: scale(1);
+}
+.content_right::after {
+  position: absolute;
+  content: "CASUAL";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 10px;
+  text-shadow: 4px 4px 20px rgba(153, 0, 255, 0.594);
+  background-color: rgba(0, 0, 0, 0.349);
+  transform: scale(0, 1);
+  transition: transform 1s;
+  transform-origin: right;
+  backdrop-filter: blur(3px);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.content_right:hover::after {
+  transform: scale(1);
 }
